<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/navigation_bGoTo_newEntry"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/navigation_bGoTo_newEntry" />

    <Button
        android:id="@+id/navigation_bGoTo_positionsList"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/navigation_bGoTo_positionsData" />

    <Button
        android:id="@+id/navigation_bGoTo_manageEntries"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigation_bGoTo_manageEntries" />
</LinearLayout>