<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/removeBar_tId"
        android:text="@string/removeBar_tId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/removeBar_editId"
        android:paddingVertical="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@id/removeBar_bRemoveAll"
        app:layout_constraintHorizontal_weight="0.25"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/removeBar_editId"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/removeBar_tId"
        app:layout_constraintEnd_toStartOf="@id/removeBar_bRemoveId"
        app:layout_constraintBottom_toBottomOf="@id/removeBar_bRemoveAll"
        app:layout_constraintHorizontal_weight="2"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/removeBar_bRemoveId"
        android:text="@string/removeBar_bRemoveId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/removeBar_editId"
        app:layout_constraintEnd_toStartOf="@id/removeBar_bRemoveAll"
        app:layout_constraintHorizontal_weight="1"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/removeBar_bRemoveAll"
        android:text="@string/removeBar_bClearAll"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/removeBar_bRemoveId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>